Refactor how modes work to simplify reset between uses. CSS cleanup

--- a/lib/src/ui/source-path.html
+++ b/lib/src/ui/source-path.html
@@ -7,6 +7,9 @@
         background-color: #2C3E50;
         font-family: 'Lato';
         font-weight: bold;
+        padding: 10px 8px;
+        display: inline-block;
+        vertical-align: middle;
       }
 
       .source-path a,
