--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -146,7 +146,7 @@
                   <template if="{{method.value.name.source != null}}">
                     <div><span class="method-name-source">{{method.value.name.source}}</span></div>
                   </template>
-                  {{method.value.name.short}}
+                  {{method.value.name.display}}
                 </h3>
                 <ul class="phases">
                   <template repeat="{{phase in method.value.phases | enumerate}}">
@@ -156,7 +156,7 @@
               </template>
               <template if="{{method.value.hasSinglePhase}}">
                 <h3 class="deopt-{{method.value.worstDeopt}}">
-                  <a href="#" on-click="{{selectPhase}}" data-phase="{{method.index}},0">{{method.value.name.short}}</a>
+                  <a href="#" on-click="{{selectPhase}}" data-phase="{{method.index}},0">{{method.value.name.display}}</a>
                 </h3>
               </template>
             </li>
