--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script>
     // Provide a getTag hook to ensure that Shadow DOM polyfill wrappers
     // are unwrapped before applying getTag to it. This ensures that
