Change video URL

--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
         <p class="lead">This is an <span class="alpha-warning">alpha preview</span> of the tool that can display intermediate representations used by V8 and Dart VM optimizing compilers.</p>
         <p>Originally it was intended for compiler developers but since release of the first version has been used by JavaScript/Dart developers investigating performance of their applications.</p>
         <p>If it's you first time trying IRHydra consider watching the following screencast showcasing its main features:</p>
-        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/y8hVeKMD_oM" frameborder="0" allowfullscreen></iframe></p>
+        <p><iframe width="420" height="315" src="https://www.youtube.com/embed/pycQWDuCBN8" frameborder="0" allowfullscreen></iframe></p>
         <h2>Demos</h2>
         <p>Try clicking on the links below to explore features that IRHydra provides. Each link loads compilation artifacts collected from a single V8 or Dart VM run on a given source file.</p>
         <ul>
