Split property changes and component rendering. Schedule rendering asynchronously.

--- a/web/index.html
+++ b/web/index.html
@@ -86,7 +86,7 @@
 <span data-toggle="tooltip" data-title="Redirect disassembly, source dumps and deoptimizations from stdout.">--redirect-code-traces</span>
 <span data-toggle="tooltip" data-title="Redirect disassembly, source dumps and deoptimizations from stdout into code.asm">--redirect-code-traces-to=code.asm</span>
 </pre>
-<p>Additionally you can pass the following flags to enable disassembly view. <span class="alpha-warning">This requires building V8 with <code>v8_enable_disassembler=1</code> GYP flag.</p>
+<p>Additionally you can pass the following flags to enable disassembly view. <span class="alpha-warning">This requires building V8 with <code>v8_enable_disassembler=1</code> GYP flag.</span></p>
 <pre>
 <span data-toggle="tooltip" data-title="Output disassembly for every generated optimized function">--print-opt-code</span>
 </pre>
