--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -11,24 +11,28 @@
   <link rel="import" href="source-pane.html">
   <link rel="import" href="source-path.html">
   <link rel="import" href="spinner-element.html">
-  <link rel="import" href="tab-pane.html">
+  <link rel="import" href="util/switching-scope.html">
   <template>
     <style>
-      #sidebar {
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        bottom: 0px;
-        width: 250px;
-        background: #2C3E50;
-
-        display: flex;
-        flex-flow: column;
-        flex-direction: column;
-        padding: 5px;
+      @host {
+         *, :scope, scrollable-table {
+           position: fixed;
+           left: 0px;
+           right: 0px;
+           top: 0px;
+           bottom: 0px;
+           display: flex;
+           flex-flow: column;
+         }
       }
 
-      #sidebar button {
+      .header {
+        height: 40px;
+        padding: 0px;
+        background: #2C3E50;
+      }
+
+      button {
         background: #2C3E50;
         border: 0px;
         color: white;
@@ -37,77 +41,199 @@
         font-size: 16pt;
       }
 
-      #sidebar button:hover {
+      button:hover {
         background: #34495E;
       }
 
-      #header {
-        min-height: 40px;
-        padding: 0px;
+      button:disabled {
+        color: #95A5A6;
       }
 
-      #pane {
-        margin-left: 250px;
-        padding: 0px;
+      button:disabled:hover {
+        background: #2C3E50;
       }
 
-      method-list {
+      .pane {
         display: flex;
-        flex-flow: column;
-        flex-direction: column;
-        min-height: 0px;
+        flex-flow: row;
+        position: relative;
+        flex: 1 1;
+      }
+
+      .sidebar {
+        min-width: 250px;
+        max-width: 250px;
+        background: #2C3E50;
+      }
+
+      .pane > * {
+        flex: 1 1;
+      }
+
+      .pane-controls {
+        position: absolute;
+        left: 250px;
+        top: 0px;
+        height: 40px;
+        padding-left: 0;
+        margin-bottom: 0;
+        margin-top: 0;
+        list-style: none;
+        background-color: #2C3E50;
+      }
+
+      .pane-controls:before,
+      .pane-controls:after {
+        display: table;
+        content: " ";
+      }
+
+      .pane-controls:after {
+        clear: both;
+      }
+
+      .pane-controls > div {
+        position: relative;
+        display: block;
+        text-align: center;
+        min-width: 4em;
+        float: left;
+        margin-bottom: -1px;
+      }
+
+      .pane-controls > :not(.tab-header) {
+        display: none !important;
+      }
+
+      .pane-controls > :not(.tab-header).active {
+        display: block !important;
+      }
+
+      /* @polyfill .pane-controls > div > a, .pane-controls > div > dropdown-element .ui-dropdown-selected */
+      .pane-controls > div > a,
+      .pane-controls > div > dropdown-element ^ .ui-dropdown-selected {
+        font-family: 'Lato';
+        font-weight: bold;
+        letter-spacing: 0.05em;
+        position: relative;
+        display: block;
+        padding: 10px 8px;
+        color: #ffffff;
+        margin-right: 2px;
+        line-height: 1.428571429;
+        border: 0px solid transparent;
+        text-decoration: none;
+      }
+
+      .pane-controls > div > a:hover {
+        color: #1ABC9C;
+        text-decoration: none;
+      }
+
+      .pane-controls > div.active > a,
+      .pane-controls > div.active > a:hover,
+      .pane-controls > div.active > a:focus {
+        color: #ffffff;
+        cursor: default;
+        background-color: #16A085;
+        border: 0px solid #16A085;
+        border-bottom-color: transparent;
+      }
+
+
+      /* @polyfill .pane-controls .ui-dropdown-options > a */
+      .pane-controls dropdown-element > a {
+        display: block;
+        padding: 3px 20px;
+        clear: both;
+        font-weight: normal;
+        line-height: 1.428571429;
+        color: #fff;
+        white-space: nowrap;
+        z-index: 9999;
+      }
+
+      /* @polyfill .pane-controls .ui-dropdown-options > a:hover, .pane-controls .ui-dropdown-options > a:focus */
+      .pane-controls dropdown-element > a:hover,
+      .pane-controls dropdown-element > a:focus {
+        color: #fff;
+        text-decoration: none;
+        background-color: #34495E;
+       }
+
+      /* @polyfill .pane-controls .ui-dropdown-options */
+      .pane-controls > div > dropdown-element ^ .ui-dropdown-options {
+        background-color: #2C3E50;
+      }
+
+      .panes > div {
+        display: none;
+      }
+
+      .panes > div.active {
+        display: block;
+      }
+
+      .pane > switching-scope {
+        display: flex;
+        overflow: auto;
+      }
+
+      .panes {
+        flex: 1 1;
       }
     </style>
 
-    <div id="sidebar">
-      <div id="header">
-        <open-file-button on-opened="{{openCompilation}}" data-title="Load Compilation Artifacts"><i class="fa fa-folder-open"></i></open-file-button>
-        <template if="{{currentFiles != null}}">
-          <button href="#" on-click="{{reloadCurrentFiles}}" title="Reload Current Files"><i class="fa fa-repeat"></i></button>
-        </template>
-        <!-- TODO(mraleph): enable profiles back.
-        <template if="{{currentMode != null}}">
-          <open-file-button><i class="fa fa-bolt"></i></open-file-button>
-        </template>
-        -->
-        <spinner-element id="spinner"></spinner-element>
-      </div>
-
-      <method-list methods="{{currentMethods}}" on-selected="{{displayPhase}}"></method-list>
-    </div>
-
-    <div id="pane">
+    <div class="header">
+      <open-file-button on-opened="{{openCompilation}}" data-title="Load Compilation Artifacts"><i class="fa fa-folder-open"></i></open-file-button>
+      <template if="{{files != null}}">
+        <button href="#" on-click="{{reloadCurrentFiles}}" title="Reload Current Files"><i class="fa fa-repeat"></i></button>
+      </template>
+      <spinner-element id="spinner"></spinner-element>
       <template if="{{ir != null}}">
-        <tab-pane disabled="{{ { 'source': currentMethod.sources.isEmpty  } }}">
-          <div data-title="IR" data-href="ir">
-            <ir-pane id="ir-pane" ir="{{ir}}" codeMode="{{codeMode}}"></ir-pane>
+        <switching-scope active="{{activeTab}}" class="pane-controls">
+          <div when-ir class="tab-header"><a href="#ir">IR</a></div>
+          <div when-graph class="tab-header"><a href="#graph">Graph</a></div>
+          <div when-source class="tab-header"><a href="#source">Source</a></div>
+          <div when-ir>
+            <dropdown-element selected="{{codeMode}}">
+              <a href="#" data-value="split">Split Disassembly</a>
+              <a href="#" data-value="inline">Inline Disassembly</a>
+              <a href="#" data-value="none">Hide Disassembly</a>
+            </dropdown-element>
           </div>
-          <div data-title="Graph" data-href="graph">
-            <graph-pane ir="{{ir}}" on-block-mouse-over="{{showBlockAction}}" on-block-mouse-out="{{hideBlockAction}}">
-            </graph-pane>
-          </div>
-          <div data-title="Source" data-href="source">
-              <source-pane id="source-pane" path="{{sourcePath}}" on-deopt-enter="{{enterDeoptAction}}" on-deopt-leave="{{leaveDeoptAction}}">
-              </source-pane>
-          </div>
-          <span class="after-tabs" data-when="ir">
-            <template if="{{!ir.code.isEmpty}}">
-              <dropdown-element value="{{codeMode}}">
-                <li><a href="#" data-value="split">Split Disassembly</a></li>
-                <li><a href="#" data-value="inline">Inline Disassembly</a></li>
-                <li><a href="#" data-value="none">Hide Disassembly</a></li>
-              </dropdown-element>
-            </template>
-          </span>
-          <span class="after-tabs" data-when="ir|source">
-            <deopt-links deopts="{{currentMethod.deopts}}" on-deopt-click="{{navigateToDeoptAction}}" on-deopt-enter="{{enterDeoptAction}}" on-deopt-leave="{{leaveDeoptAction}}">
+          <div when-ir when-source>
+            <deopt-links deopts="{{method.deopts}}" on-deopt-click="{{navigateToDeoptAction}}" on-deopt-enter="{{enterDeoptAction}}" on-deopt-leave="{{leaveDeoptAction}}">
             </deopt-links>
-          </span>
-          <span class="after-tabs" data-when="source">
+          </div>
+          <div when-source>
             <source-path path="{{sourcePath}}">
             </source-path>
-          </span>
-        </tab-pane>
+          </div>
+        </switching-scope>
+      </template>
+    </div>
+
+    <div class="pane">
+      <template if="{{methods != null && !methods.isEmpty}}">
+        <div class="sidebar">
+          <method-list methods="{{methods}}" on-selected="{{displayPhase}}"></method-list>
+        </div>
+        <template if="{{ir != null}}">
+          <switching-scope active="{{activeTab}}" class="panes">
+            <div when-ir>
+              <ir-pane id="ir-pane" ir="{{ir}}" codeMode="{{codeMode}}"></ir-pane>
+            </div>
+            <div when-graph>
+              <graph-pane ir="{{ir}}" on-block-mouse-over="{{showBlockAction}}" on-block-mouse-out="{{hideBlockAction}}">
+              </graph-pane>
+            </div>
+            <div when-source>
+              <source-pane id="source-pane" path="{{sourcePath}}" on-deopt-enter="{{enterDeoptAction}}" on-deopt-leave="{{leaveDeoptAction}}">
+              </source-pane>
+            </div>
+          </switching-scope>
+        </template>
       </template>
     </div>
   </template>
