--- a/web/index.html
+++ b/web/index.html
@@ -40,14 +40,14 @@
 
     <script src="jquery-2.0.3.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
-    
+
     <link rel="import" href="packages/irhydra/src/ui/hydra.html">
   </head>
 
   <body>
     <div id="welcome-splash">
       <div class="welcome-message">
-        <h1>IRHydra 2.0<span id="splash-spinner"></span></h1>
+        <h1>IRHydra<sup>2</sup> <span id="splash-spinner"></span></h1>
         <p class="lead">This is an <span class="alpha-warning">alpha preview</span> of the tool that can display intermediate representations used by V8 and Dart VM optimizing compilers.</p>
         <p>Originally it was intended for compiler developers but since release of the first version has been used by JavaScript/Dart developers investigating performance of their applications.</p>
         <p>If it's you first time trying IRHydra consider watching the following screencast showcasing its main features:</p>
