Fix scrolling of the method list.
Flexbox all the intermediate containers.

Also prevent method list footer from shrinking by fixing its size.

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -69,9 +69,22 @@
         min-width: 250px;
         max-width: 250px;
         background: #2C3E50;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-flow: column;
+        flex-flow: column;
       }
 
       .pane > * {
+        -webkit-flex: 1 1;
+        flex: 1 1;
+      }
+
+      .sidebar > * {
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-flow: column;
+        flex-flow: column;
         -webkit-flex: 1 1;
         flex: 1 1;
       }
