--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -14,6 +14,7 @@
         flex-direction: column;
 
         min-height: 0px;
+        flex: 1 1;
       }
 
       .method-list-methods {
@@ -28,8 +29,10 @@
       }
 
       .method-list-footer {
-        min-height: 30px;
-        padding: 5px;
+        min-height: 50px;
+        height: 50px;
+        max-height: 50px;
+        padding-left: 5px;
       }
 
       .method-list-methods::-webkit-scrollbar {
