--- a/web/index.html
+++ b/web/index.html
@@ -80,7 +80,7 @@
 <span data-toggle="tooltip" data-title="Dump only IR from the very last phase">--trace-phase=Z</span>
 <span data-toggle="tooltip" data-title="Print information about every deoptimization">--trace-deopt</span>
 <span data-toggle="tooltip" data-title="Emit comments as part of generated native code. Makes deoptimization traces more informative.">--code-comments</span>
-<span data-toggle="tooltip" data-title="Track precise source position information during optimization">--emit-opt-code-positions</span>
+<span data-toggle="tooltip" data-title="Track precise source position information during optimization">--hydrogen-track-positions</span>
 <span data-toggle="tooltip" data-title="Redirect disassembly, source dumps and deoptimizations from stdout.">--redirect-code-traces</span>
 <span data-toggle="tooltip" data-title="Redirect disassembly, source dumps and deoptimizations from stdout into code.asm">--redirect-code-traces-to=code.asm</span>
 </pre>
@@ -89,7 +89,17 @@
 <span data-toggle="tooltip" data-title="Output disassembly for every generated optimized function">--print-opt-code</span>
 </pre>
         <p>When run with this flags V8 will produce two files <code>hydrogen.cfg</code> and <code>code.asm</code> both of which should be loaded into IRHydra.</p>
-        <p>When running in Chromium use <code>--js-flags="..."</code> to pass V8 flags and <code>--no-sandbox</code> to allow V8 to write <code>hydrogen.cfg</code> and <code>code.asm</code>.</p>
+        <p>When running in Chromium use <code>--js-flags="..."</code> to pass V8 flags and <code>--no-sandbox</code> to allow V8 to write <code>hydrogen-&lt;pid&gt;-&lt;id&gt;.cfg</code> and <code>code-&lt;pid&gt;-&lt;id&gt;.asm</code>.</p>
+        <pre>
+--no-sandbox                           \
+--js-flags="--trace-hydrogen           \
+            --trace-phase=Z            \
+            --trace-deopt              \
+            --code-comments            \
+            --hydrogen-track-positions \
+            --redirect-code-traces"
+</pre>
+        <p>Notice that there is no need to pass <code>--redirect-code-traces-to=code.asm</code> flag, this guarantees that in the presence of multiple renderer processes compilation artifacts are correctly split between separate files.</p>
         <h3>Dart VM</h3>
         <p>You need to pass the following flags to Dart VM to collect IR and disassemble artifacts:</p>
         <pre>
