Experimental source annotations
Mark lines that did not result in any code with reduced opacity.

Mark lines that produce only LICMed code with special background
(experimental variant).

--- a/lib/src/ui/source-pane.html
+++ b/lib/src/ui/source-pane.html
@@ -2,7 +2,7 @@
 <polymer-element name="source-pane" attributes="method path">
   <link rel="import" href="code-mirror.html">
   <template>
-    <code-mirror id="editor" lines="{{source}}" widgets="{{widgets}}">
+    <code-mirror id="editor" lines="{{source}}" widgets="{{widgets}}" lineClasses="{{lineClasses}}">
     </code-mirror>
   </template>
   <script type="application/dart" src='source-pane.dart'></script>
