--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,9 @@
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spin.js/1.3.2/spin.min.js"></script>
 
+    <script src="deps/esprima.js"></script>
+    <script src="deps/estraverse.js"></script>
+
     <script src="deps/codemirror-3.21/codemirror.js"></script>
     <script src="deps/codemirror-3.21/modes/javascript.js"></script>
     <link rel="stylesheet" href="deps/codemirror-3.21/codemirror.css">
