--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -62,7 +62,8 @@
 
       .nav > li > h3 {
         padding-left: 5px;
-        font-weight: 400;
+        font-weight: 200;
+        font-size: 1.2em;
       }
 
       .nav > li > h3 > a {
