--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<polymer-element name="method-list" apply-author-styles>
+<polymer-element name="method-list">
   <template>
     <style>
       .method-list {
@@ -48,6 +48,14 @@
       .method-list-methods::-webkit-scrollbar-thumb {
         background: #BDC3C7;
         border-radius: 5px;
+      }
+
+      .nav {
+        list-style: none;
+        position: relative;
+        display: block;
+        padding-left: 0;
+        margin-bottom: 0;
       }
 
       .nav > li > h3 {
