--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -217,6 +217,20 @@
         background: #ECF0F1;
         color: #BDC3C7;
       }
+
+      .fa {
+        display: inline-block;
+        font-family: FontAwesome;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      .fa-folder-open:before {
+        content: "\f07c";
+      }
     </style>
 
     <div class="header">
