--- a/web/index.html
+++ b/web/index.html
@@ -28,18 +28,14 @@
     <link type="text/css" href="css/irpane.css" rel="stylesheet" >
     <link type="text/css" href="css/hydra.css" rel="stylesheet" >
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="deps/fa/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spin.js/1.3.2/spin.min.js"></script>
+    <script type="text/javascript" src="deps/spin.min.js"></script>
 
     <script src="deps/esprima.js"></script>
     <script src="deps/estraverse.js"></script>
-
-    <script src="deps/codemirror-3.21/codemirror.js"></script>
-    <script src="deps/codemirror-3.21/modes/javascript.js"></script>
-    <link rel="stylesheet" href="deps/codemirror-3.21/codemirror.css">
 
     <script src="jquery-2.0.3.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
