Moving to a polymer 0.10.0

--- a/lib/src/ui/dropdown-element.html
+++ b/lib/src/ui/dropdown-element.html
@@ -55,5 +55,5 @@
       </div>
     </div>
   </template>
-  <script type="application/dart" src='dropdown-element.dart'></script>
+  <script type="application/dart;component=1" src='dropdown-element.dart'></script>
 </polymer-element>
