--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -293,5 +293,5 @@
       </template>
     </div>
   </template>
-  <script src="hydra.dart" type="application/dart"></script>
+  <script type="application/dart;component=1" src="hydra.dart"></script>
 </polymer-element>
