--- a/lib/src/ui/ir-pane.html
+++ b/lib/src/ui/ir-pane.html
@@ -2,8 +2,8 @@
 
 <polymer-element name="ir-pane">
   <template>
-    <link rel="stylesheet" href="css/irpane.css" type="text/css">
-    <link rel="stylesheet" href="css/hydra.css" type="text/css">
+    <link rel="stylesheet" href="../../../../css/irpane.css" type="text/css">
+    <link rel="stylesheet" href="../../../../css/hydra.css" type="text/css">
 
     <style type='text/css' >
 
@@ -12,5 +12,5 @@
       <table id="rows" class="irpane"></table>
     </div>
   </template>
-  <script type="application/dart" src='ir-pane.dart'></script>
+  <script type="application/dart;component=1" src='ir-pane.dart'></script>
 </polymer-element>
