--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -192,5 +192,5 @@
       </div>
     </div>
   </template>
-  <script src="method-list.dart" type="application/dart"></script>
+  <script  type="application/dart;component=1" src="method-list.dart"></script>
 </polymer-element>
