--- a/lib/src/ui/open-file-button.html
+++ b/lib/src/ui/open-file-button.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<polymer-element name="open-file-button" apply-author-styles>
+<polymer-element name="open-file-button">
   <template>
     <style scoped>
       input[type=file] {
@@ -36,5 +36,5 @@
     </span>
     <button on-click="{{clicked}}"><content></content></button>
   </template>
-  <script src="open-file-button.dart" type="application/dart"></script>
+  <script type="application/dart;component=1" src="open-file-button.dart"></script>
 </polymer-element>
