--- a/lib/src/ui/spinner-element.html
+++ b/lib/src/ui/spinner-element.html
@@ -11,5 +11,5 @@
     </style>
     <span id="spinner">&nbsp;</span>
   </template>
-  <script type="application/dart" src='spinner-element.dart'></script>
+  <script type="application/dart;component=1" src='spinner-element.dart'></script>
 </polymer-element>
