--- a/lib/src/ui/util/switching-scope.html
+++ b/lib/src/ui/util/switching-scope.html
@@ -3,5 +3,5 @@
   <template>
     <content></content>
   </template>
-  <script type="application/dart" src='switching-scope.dart'></script>
+  <script type="application/dart;component=1" src='switching-scope.dart'></script>
 </polymer-element>
