--- a/lib/src/modes/v8/ui/descriptions.html
+++ b/lib/src/modes/v8/ui/descriptions.html
@@ -39,5 +39,5 @@
       <p>If numeric value does not fit into a smi it has to be boxed as a <em>heap number</em>.</p>
     </div>
   </template>
-  <script type="application/dart" src='descriptions.dart'></script>
+  <script type="application/dart;component=1" src='descriptions.dart'></script>
 </polymer-element>
