--- a/lib/src/ui/deopt-links.html
+++ b/lib/src/ui/deopt-links.html
@@ -61,5 +61,5 @@
       </div>
     </template>
   </template>
-  <script type="application/dart" src='deopt-links.dart'></script>
+  <script type="application/dart;component=1" src='deopt-links.dart'></script>
 </polymer-element>
