--- a/lib/src/ui/graph-pane.html
+++ b/lib/src/ui/graph-pane.html
@@ -11,5 +11,5 @@
       <div id="graph"></div>
     </div>
   </template>
-  <script type="application/dart" src='graph-pane.dart'></script>
+  <script type="application/dart;component=1" src='graph-pane.dart'></script>
 </polymer-element>
