--- a/lib/src/ui/source-path.html
+++ b/lib/src/ui/source-path.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <polymer-element name="source-path">
   <template>
-    <link rel="stylesheet" href="deps/fa/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../../../deps/fa/css/font-awesome.min.css">
     <style>
       .source-path {
         color: white;
@@ -37,5 +37,5 @@
       </template>
     </span>
   </template>
-  <script type="application/dart" src='source-path.dart'></script>
+  <script type="application/dart;component=1" src='source-path.dart'></script>
 </polymer-element>
