Remove stale web/

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Oswald:400,700' type='text/css'>
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Lato:400,700,900' type='text/css'>
 
-    <link rel="stylesheet" href="web/css/irpane.css">
+    <link rel="stylesheet" href="css/irpane.css">
     <link rel="stylesheet" href="css/hydra.css">
 
     <link rel="stylesheet" href="deps/fa/css/font-awesome.min.css">
