Finish move to the newest polymer 0.10.0-pre.10
Now works both in Dartium and Canary and Beta

--- a/lib/src/ui/ir-pane.html
+++ b/lib/src/ui/ir-pane.html
@@ -2,12 +2,7 @@
 
 <polymer-element name="ir-pane">
   <template>
-    <link rel="stylesheet" href="../../../../css/irpane.css" type="text/css">
-    <link rel="stylesheet" href="../../../../css/hydra.css" type="text/css">
-
-    <style type='text/css' >
-
-    </style>
+    <link rel="stylesheet" href="ir-pane.css" type="text/css">
     <div style="display: inline-block; position: relative;">
       <table id="rows" class="irpane"></table>
     </div>
