--- a/lib/src/ui/source-path.html
+++ b/lib/src/ui/source-path.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <polymer-element name="source-path">
   <template>
-    <link rel="stylesheet" href="../../../../deps/fa/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/deps/fa/css/font-awesome.min.css">
     <style>
       .source-path {
         color: white;
