Remove decoration from assembly drop down

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -169,6 +169,7 @@
         color: #fff;
         white-space: nowrap;
         z-index: 9999;
+        text-decoration: none;
       }
 
       /* @polyfill .pane-controls .ui-dropdown-options > a:hover, .pane-controls .ui-dropdown-options > a:focus */
