--- a/lib/src/ui/source-pane.html
+++ b/lib/src/ui/source-pane.html
@@ -20,6 +20,10 @@
   	    color: #428bca;
   	  }
 
+      code-mirror ^ .CodeMirror {
+        font-size: 18pt;
+      }
+
       code-mirror ^ .inline-marker:hover {
         color: #2a6496;
       }
