--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
     <script src="deps/estraverse.js"></script>
 
     <script src="jquery-2.0.3.js"></script>
+    <script src="deps/jquery-ui-1.10.4/js/jquery-ui-1.10.4.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
   </head>
 
@@ -34,6 +35,11 @@
         <p>Originally it was intended for compiler developers but since release of the first version has been used by JavaScript/Dart developers investigating performance of their applications.</p>
         <p>If it's you first time trying IRHydra consider watching the following screencast showcasing its main features:</p>
         <p><!-- <iframe width="420" height="315" src="https://www.youtube.com/embed/pycQWDuCBN8" frameborder="0" allowfullscreen></iframe> --></p>
+        <h2>WebRebels Demos</h2>
+        <ul id="webrebels-demos">
+
+        </ul>
+
         <h2>Demos</h2>
         <p>Try clicking on the links below to explore features that IRHydra provides. Each link loads compilation artifacts collected from a single V8 or Dart VM run on a given source file.</p>
         <ul>
